<resources>
    <string name="app_name">EasyTravel</string>
    <string name="usuario">Nome do usuário</string>
    <string name="senha_usuario">Senha</string>
    <string name="btn_entrar">Entrar</string>
    <string name="nome">Nome</string>
    <string name="btn_voltar_registration">Voltar</string>
    <string name="btn_salvar">SALVAR OPERAÇÃO</string>
    <string name="btn_reservartodos">Reservar todos</string>
    <string name="btn_cadastro">Cadastrar</string>
    <string name="config">Configurações</string>
    <string name="numMesa">Número Mesa</string>
    <string name="Login">Faça Login</string>
    <string name="MensagemLogin">Seja bem-vindo de volta! Faça login na sua conta:</string>
    <string name="NaoPossuiLogin">Não tem conta ainda?</string>
    <string name="RegistreSe">Registre-se</string>
    <string name="Cadastro">Cadastre-se</string>
    <string name="MensagemCadastro">Ainda não tem conta conosco? É simples de criar! Você só precisa inserir os seus dados abaixo.</string>
    <string name="Email">Email</string>
    <string name="qtadePessoa">Total de Viajante</string>
    <string name="diasViagem">Duração da viagem</string>
    <string name="Favoritos">Favoritos</string>
    <string name="Procurar">Procurar</string>
    <string name="Informacao">Informações</string>
    <string name="MinhasViagens">Minhas Viagens</string>
    <string name="Gasolina">Gasolina</string>
    <string name="TotalEstimadoDeQuilometros">Total estimado de quilômetros</string>
    <string name="Extotkm">Ex: 42</string>
    <string name="tarAerea">Tarifa Aérea</string>
    <string name="refeicao">Refeições</string>
    <string name="hotel">Hospedagem</string>
    <string name="entretenimento">Entretenimento/Diversos</string>
    <string name="dadoInvalido">Tipo de dado inválido!</string>
    <string name="listaEntretenimento">Lista de entretenimentos</string>
</resources>