<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:orientation="vertical">

    <ImageView
        android:layout_width="221dp"
        android:layout_height="161dp"
        android:layout_gravity="center"
        android:paddingBottom="-30dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/handsshow" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Login"
        android:layout_marginLeft="20dp"
        android:textStyle="bold"
        android:textSize="36dp"
        android:textColor="@color/primary"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MensagemLogin"
        android:layout_marginLeft="20dp"
        android:textSize="16dp"
        android:background="@color/background"/>

    <EditText
        android:id="@+id/editNomeUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingHorizontal="10dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:hint="@string/usuario" />

    <EditText
        android:id="@+id/editSenhaUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingHorizontal="10dp"
        android:layout_marginHorizontal="20dp"
        android:layout_gravity="center"
        android:hint="@string/senha_usuario"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="20dp"
        android:layout_gravity="center"
        android:text="@string/btn_entrar"
        android:textColor="@color/white"
        android:background="@color/primary"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">

        <TextView
            android:id="@+id/cadastre_se"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="60dp"
            android:linksClickable="true"
            android:text="@string/NaoPossuiLogin" />

    </RelativeLayout>

    <!-- <Button
        android:id="@+id/btnCadastro"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_cadastro" /> -->

</LinearLayout>