<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:foregroundGravity="fill">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_gravity="center|top"
        android:background="@color/primary">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:padding="4dp"
            android:columnCount="10">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_columnWeight="1"
                android:src="@drawable/menu" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_columnWeight="9"
                android:text="@string/MinhasViagens"
                android:paddingLeft="30dp"
                android:paddingTop="10dp"
                android:textSize="20dp"
                android:textColor="@color/white"
                />
        </GridLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="61dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:paddingTop="10dp"
                    android:paddingLeft="10dp"
                    android:text="@string/qtadePessoa"/>

                <TextView
                    android:id="@+id/qtdeViajantes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="10dp"
                    android:layout_marginHorizontal="30dp"
                    android:text="2"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/diasViagem"
                    android:textColor="@color/black"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/duracaoViagem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="10dp"
                    android:layout_marginHorizontal="30dp"
                    android:text="2"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:paddingTop="10dp"
                    android:paddingLeft="10dp"
                    android:text="Custo total da Viagem"/>

                <TextView
                    android:id="@+id/valorTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="10dp"
                    android:layout_marginHorizontal="30dp"
                    android:text="R$ 0,00"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:paddingTop="10dp"
                    android:paddingLeft="10dp"
                    android:text="Custo por pessoa"/>

                <TextView
                    android:id="@+id/valorPorPessoa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="10dp"
                    android:layout_marginHorizontal="30dp"
                    android:text="R$ 0,00"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_gravity="center|bottom"
        android:background="@color/primary">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:padding="4dp"
            android:columnCount="3">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_columnWeight="1">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/favicon"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:text="@string/Favoritos"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_columnWeight="1">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/procurar"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:text="@string/Procurar"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_columnWeight="1">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/informacao"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:text="@string/Informacao"/>
            </LinearLayout>
        </GridLayout>

    </LinearLayout>
</FrameLayout>