<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:foregroundGravity="fill">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_gravity="center|top"
        android:background="@color/primary">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:padding="4dp"
            android:columnCount="10">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_columnWeight="1"
                android:src="@drawable/menu" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_columnWeight="9"
                android:text="@string/MinhasViagens"
                android:paddingLeft="30dp"
                android:paddingTop="10dp"
                android:textSize="20dp"
                android:textColor="@color/white"
                />
        </GridLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="61dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

           <androidx.recyclerview.widget.RecyclerView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="2dp"
               android:id="@+id/recycler_view"
               android:layout_gravity="center_horizontal"/>

        </LinearLayout>

    </ScrollView>

    <ImageView
        android:id="@+id/adicionarViagem"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="right|bottom"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="60dp"
        android:src="@drawable/adicionar_viagem" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_gravity="center|bottom"
        android:background="@color/primary">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:padding="4dp"
            android:columnCount="3">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_columnWeight="1">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/favicon"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:text="@string/Favoritos"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_columnWeight="1">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/procurar"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:text="@string/Procurar"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_columnWeight="1">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/informacao"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:text="@string/Informacao"/>
            </LinearLayout>
        </GridLayout>

    </LinearLayout>


</FrameLayout>