<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:foregroundGravity="fill">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_gravity="center|top"
        android:background="@color/primary">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:padding="4dp"
            android:columnCount="10">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_columnWeight="1"
                android:src="@drawable/menu" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_columnWeight="9"
                android:text="@string/MinhasViagens"
                android:paddingLeft="30dp"
                android:paddingTop="10dp"
                android:textSize="20dp"
                android:textColor="@color/white"
                />
        </GridLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:layout_marginLeft="20dp"
                android:src="@drawable/combustivel" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/Gasolina"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:paddingTop="10dp"
            android:paddingLeft="10dp"
            android:text="@string/TotalEstimadoDeQuilometros"/>

        <EditText
            android:id="@+id/TotEstimadoKm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:layout_marginHorizontal="30dp"
            android:hint="@string/Extotkm"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:paddingTop="10dp"
            android:paddingLeft="10dp"
            android:text="Média de quilômetros por litro"/>

        <EditText
            android:id="@+id/MediaKmL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:layout_marginHorizontal="30dp"
            android:hint="Ex: 10 km/l"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:paddingTop="10dp"
            android:paddingLeft="10dp"
            android:text="Custo médio por litro"/>

        <EditText
            android:id="@+id/CustoMedioL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:layout_marginHorizontal="30dp"
            android:hint="Ex: R$ 15,00"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:paddingTop="10dp"
            android:paddingLeft="10dp"
            android:text="Total de veículos"/>

        <EditText
            android:id="@+id/TotalVeiculos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:layout_marginHorizontal="30dp"
            android:hint="Ex: 1"/>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:columnCount="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_columnWeight="1"
                android:textSize="20dp"
                android:textStyle="bold"
                android:gravity="left"
                android:textColor="@color/secondary"
                android:text="Total"/>

            <TextView
                android:id="@+id/ValorTot"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="right"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="R$ 00,00"
                android:layout_columnWeight="1"/>
        </GridLayout>

        <Button
            android:id="@+id/calcular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="calcular"
            android:layout_marginHorizontal="20dp"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:background="@color/primary"
            android:layout_marginTop="5dp"/>

        <Button
            android:id="@+id/finalizar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="finalizar"
            android:layout_marginHorizontal="20dp"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:background="@color/primary"
            android:layout_marginTop="5dp"/>

    </LinearLayout>

</FrameLayout>